<package>
  <name>mobile_base</name>
  <version>1.0.0</version>
  <description>mobile_base</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mobile_base_description</run_depend>
  <run_depend>mobile_base_gazebo</run_depend>
  <run_depend>mobile_base_control</run_depend>
  <run_depend>mobile_base_sim</run_depend>
  <run_depend>mobile_base_logging</run_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>
