<?xml version="1.0"?>
<package format="2">
  <name>mobile_base_gazebo</name>
  <version>0.1.0</version>
  <description>mobile_base_gazebo package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros_control</depend>
  <depend>mobile_base_description</depend>
  <depend>transmission_interface</depend>
  <depend>hardware_interface</depend>
</package>
