<?xml version="1.0"?>
<package format="2">
  <name>mobile_base_sim</name>
  <version>0.1.0</version>
  <description>mobile_base_gazebo package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>mobile_base_gazebo</depend>
  <depend>mobile_base_control</depend>
</package>
